--- a/src/telas/FormularioFornecedor.form
+++ b/src/telas/FormularioFornecedor.form
@@ -136,6 +136,7 @@
     </Component>
     <Component class="javax.swing.JTextField" name="tfNome">
       <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="tfNomeActionPerformed"/>
         <EventHandler event="keyPressed" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="tfNomeKeyPressed"/>
       </Events>
     </Component>
